--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -12,3 +12,8 @@ Version 0.1.2
 -------------
 
     - Add more commandline options.
+
+Version 0.1.3
+-------------
+
+    - Exit with non-zero code when execution of function fails.
